--- a/src/components/Leagal.astro
+++ b/src/components/Leagal.astro
@@ -19,7 +19,7 @@
     <h2 class="c-pageSection_title">モニター表示との相違について</h2>
     <p class="c-pageSection_text">
       ・実際にお届けする商品はご覧になる端末やディスプレイによって掲載写真と色彩等のイメージが異なる場合がございますので、予めご了承下さい。<br>
-      ・特に革製品の場合、光沢やシワ等の風合いがパソコンモニター掲載写真と異なる場合がございますので、予めご了承下さい。
+      <br class="sp">・特に革製品の場合、光沢やシワ等の風合いがパソコンモニター掲載写真と異なる場合がございますので、予めご了承下さい。
     </p>
   </section>
   <section class="c-pageSection">
@@ -30,16 +30,16 @@
     <h2 class="c-pageSection_title">ご負担いただく費用について</h2>
     <p class="c-pageSection_text">
       ・以下の費用はお客様のご負担となります。<br>銀行振込手数料<br>
-      ・ご注文確認画面にて上記金額を含んだご請求額をご確認下さい。
+      <br class="sp">・ご注文確認画面にて上記金額を含んだご請求額をご確認下さい。
     </p>
   </section>
   <section class="c-pageSection">
     <h2 class="c-pageSection_title">梱包配送料金について</h2>
     <p class="c-pageSection_text">
       ・送料は無料です。<br>
-      配送方法は、商品の大きさに合わせ日本郵便のレターパックプラス、ゆうパックでの配送になります。お支払い方法が銀行振込の場合は、ご入金確認後に発送いたします。<br>
-      ※当店では送料込みの為、簡易包装での発送となります。<br>
-      ※１回の注文の同梱品は、１コ口での配送となりますが、数量によっては安全性確保のために梱包を複数に分割する場合がございます。
+      配送方法は、商品の大きさに合わせ日本郵便のレターパックプラス、ゆうパックでの配送になります。<br class="sp"><br class="sp">お支払い方法が銀行振込の場合は、ご入金確認後に発送いたします。<br>
+      <br class="sp"> ※当店では送料込みの為、簡易包装での発送となります。<br>
+      １回の注文の同梱品は、１コ口での配送となりますが、数量によっては安全性確保のために梱包を複数に分割する場合がございます。
     </p>
   </section>
 
@@ -63,7 +63,7 @@
     <h2 class="c-pageSection_title">お支払い期限について</h2>
     <p class="c-pageSection_text">
      ・クレジットカード、PayPal、キャリア決済、楽天ペイ、PayPay残高 商品ご注文時点でお支払いが確定します。<br>
-     ・コンビニ決済、銀行振込 商品注文時点から約3日間の期限内にお支払いください。お支払い期限を過ぎると、自動でキャンセルとなります。 
+     <br class="sp">・コンビニ決済、銀行振込 商品注文時点から約3日間の期限内にお支払いください。お支払い期限を過ぎると、自動でキャンセルとなります。 
     </p>
   </section>
 
@@ -84,9 +84,9 @@
     <h2 class="c-pageSection_title">製品のお届けについて</h2>
     <p class="c-pageSection_text">
         ご注文を頂いてから一点ずつ丁寧に手作りで製作するため、発送まで2、3週間程お時間を頂いております。<br>
-      ・セミオーダーの場合には、仕入れにかかる日数を加え、発送まで3、4週間程度お時間を頂いております。<br>
-      ・銀行振込の場合は、ご入金確認後に発送させて頂きます。<br>
-      ・ご注文受付後に納期の変更等が発生した際には別途Ｅメールでご連絡を差し上げます。
+        <br class="sp">・セミオーダーの場合には、仕入れにかかる日数を加え、発送まで3、4週間程度お時間を頂いております。<br>
+        <br class="sp">・銀行振込の場合は、ご入金確認後に発送させて頂きます。<br>
+        <br class="sp">・ご注文受付後に納期の変更等が発生した際には別途Ｅメールでご連絡を差し上げます。
     </p>
     <p class="c-pageSection_text">
       ※交通事情、また天候等による交通の乱れにより、配送に遅れが生じる可能性がございます。遅延状況は当店より発送時にお送りする確認メールに記載された問い合わせ番号にて、指定の運送会社まで直接お問い合わせ下さい。<br><br>
@@ -99,11 +99,11 @@
       商品の返品は下記の場合に限り承り、商品到着後～7日以内にご連絡下さい。<br>
       <p class="c-pageSection_text">
         ・注文の商品と送られてきた商品が相違していた場合。<br>
-        ・誤配送の際は当店負担とさせていただきます。
+        <br class="sp">・誤配送の際は当店負担とさせていただきます。
       
       確認後、当店より商品返品方法をご案内させていただきます。<br><br>
-      （お届けから一週間以上が過ぎますと、返品につきましてはお受けいたしかねますのでご注意下さい。）<br>
-      製作を開始してからの途中キャンセルや完成後の返品が出来ません。<br class="sp">このため製作開始後のキャンセルはお受け致しかねます。
+      ※お届けから一週間以上が過ぎますと、返品につきましてはお受けいたしかねますのでご注意下さい。<br>
+      <br class="sp">製作を開始してからの途中キャンセルや完成後の返品が出来ません。<br class="sp">このため製作開始後のキャンセルはお受け致しかねます。
       <br>※ご連絡がないまま返送された場合には、返品・交換をお受けできませんのでご注意ください。 
 
     </p>
@@ -125,14 +125,14 @@
   <section class="c-pageSection">
     <h2 class="c-pageSection_title">決算に伴うセキュリティ対策について</h2>
     <p class="c-pageSection_text">
-      当ショップは、株式会社STORESが提供するオンラインショップサーバーを利用しています。<br>
+      当ショップは、株式会社STORESが提供するオンラインショップサーバーを利用しています。<br><br class="sp">
       送信フォームは、サーバーとお客様がご利用のパソコンとの通信を暗号化保護し、入力する際の情報を覗き見されないSSL（Secure Sockets Layer)対応です。<br>
-      クレジットカード情報は、株式会社ヘイ株式会が運営する決済サーバーに、トークン方式（カード情報非通過方式）により直接送信されるため、オンラインショップサーバーを通過いたしません。<br>
+      <br class="sp">クレジットカード情報は、株式会社ヘイ株式会が運営する決済サーバーに、トークン方式（カード情報非通過方式）により直接送信されるため、オンラインショップサーバーを通過いたしません。<br>
       また、当ショップ及び株式会社ヘイ株式会では、クレジットカード情報を一切保持しておりません。<br>
-      グローバル標準のセキュリティ基準(PCI DSS)に準拠しシステム設計しており、公式に安全性が認められています。
+      <br class="sp">グローバル標準のセキュリティ基準(PCI DSS)に準拠しシステム設計しており、公式に安全性が認められています。
       <br>
-      ・ご利用のスマートフォン・タブレット端末やPCにて、クレジットカードユーザーのカード情報を閲覧したり、個人情報が残ることはございません。<br>
-      ・ご利用のスマートフォン・タブレット端末やPCからクレジットカードユーザーのカード情報を盗まれることはございません。
+      <br class="sp">・ご利用のスマートフォン・タブレット端末やPCにて、クレジットカードユーザーのカード情報を閲覧したり、個人情報が残ることはございません。<br>
+      <br class="sp">・ご利用のスマートフォン・タブレット端末やPCからクレジットカードユーザーのカード情報を盗まれることはございません。
     </p>
   </section>
 
