--- a/src/components/Pa1.astro
+++ b/src/components/Pa1.astro
@@ -19,7 +19,7 @@
 
                 </div>
                 <div id="slides__5" class="slide">
-                    <img loading="lazy" src="/fasnersample.webp" class="slide__img" alt="ファスナー色">
+                    <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt="ファスナー色">
 
                  
                 </div>
@@ -70,8 +70,8 @@
                     <option value="ピンク">ピンク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="exteriorwhite">外装 ホワイトワックス (&thinsp;希望の方のみ+3,000円&thinsp;)</label>
-                <select name="exteriorwhite" class="form-control" >
+                <label class="Home_Contact_Label__hwNpu" for="exterior_white">外装 ホワイトワックス (&thinsp;希望の方のみ+3,000円&thinsp;)</label>
+                <select name="exterior_white" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -135,8 +135,8 @@
                     <option value="ピンク">ピンク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="fasner">*ファスナー (&thinsp;ゴールド&thinsp;)</label>
-                <select name="fasner" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="fasner_gold">ファスナー (&thinsp;ゴールド&thinsp;)</label>
+                <select name="fasner_gold" class="form-control">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ホワイト">ホワイト</option>
                     <option value="ブラウン">ブラウン</option>
@@ -147,38 +147,56 @@
                     <option value="ターコイズ">ターコイズ</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">ファスナー (&thinsp;アンティーク、シルバー 希望の方&thinsp;)
+                <label class="Home_Contact_Label__hwNpu" for="fasner_silver">ファスナー (&thinsp;シルバー 希望の方&thinsp;)
                 </label>
-                <select name="kokuin" class="form-control" >
+                <select name="fasner_silver" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="シルバー">シルバー</option>
-                    <option value="アンティーク">アンティーク</option>
-                
+                    <option value="ホワイト">ホワイト</option>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ワイン">ワイン</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="ターコイズ">ターコイズ</option>
+                </select>
+
+
+                <label class="Home_Contact_Label__hwNpu" for="fasner_antique">ファスナー (&thinsp;アンティーク 希望の方&thinsp;)
+                </label>
+                <select name="fasner_antique" class="form-control" >
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="ホワイト">ホワイト</option>
+                    <option value="ブラウン">ブラウン</option>
+                    <option value="ブラック">ブラック</option>
+                    <option value="グリーン">グリーン</option>
+                    <option value="ワイン">ワイン</option>
+                    <option value="オレンジ">オレンジ</option>
+                    <option value="ターコイズ">ターコイズ</option>
                 </select>
 
 
                 <label class="Home_Contact_Label__hwNpu" for="ito">*糸</label>
                 <select name="ito" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
+                    <option value="アイボリー">アイボリー</option>
+                    <option value="ブラック">ブラック</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グレー">グレー</option>
-                    <option value="オレンジ">オレンジ</option>
+                    <option value="ベージュ">ベージュ</option>
+                    <option value="レンガ">レンガ</option>
                     <option value="グリーン">グリーン</option>
                     <option value="ターコイズ">ターコイズ</option>
-                    <option value="ピンク">ピンク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kanagu">*金具（&thinsp;キーフック&thinsp;）</label>
-                <select name="kanagu" class="form-control" required="required">
+                <label class="Home_Contact_Label__hwNpu" for="kanagu_hook">*金具（&thinsp;キーフック&thinsp;）</label>
+                <select name="kanagu_hook" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ゴールド">ゴールド</option>
                     <option value="シルバー">シルバー</option>
                     <option value="アンティーク">アンティーク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様 (&thinsp;配置:右ポケット&thinsp;)</label>
+                <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様 (&thinsp;希望の方 配置:右ポケット&thinsp;)</label>
                 <select name="kokuin" class="form-control" required="required" >
                     <option value="" disabled selected>選択してください</option>
                     <option value="有り">有り</option>
@@ -186,7 +204,7 @@
                 
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="name">イニシャル刻印 (&thinsp;任意 配置:右ポケット&thinsp;)</label>
+                <label class="Home_Contact_Label__hwNpu" for="name">イニシャル刻印 (&thinsp;希望の方 配置:右ポケット&thinsp;)</label>
                 <input class="Home_Contact_InputText__vKPd7" id="name"  placeholder="12文字までをご記入ください">
            
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
