--- a/src/layouts/Pattern1.astro
+++ b/src/layouts/Pattern1.astro
@@ -32,7 +32,7 @@ import '@fontsource/shippori-mincho';
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
 		<title>パターンオーダー キーケース</title>
-		<meta name="description" content="パターンオーダー キーケースについて" />
+		<meta name="description" content="パターンオーダー キーケース" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
