--- a/src/pages/keycase-pattern.astro
+++ b/src/pages/keycase-pattern.astro
@@ -5,7 +5,7 @@ import { ViewTransitions } from 'astro:transitions';
 ---
 <ViewTransitions />
 
-<Layout title="キーケース パターンオーダーについて">
+<Layout title="キーケース パターンオーダー">
   <main>
 
   </main>
