--- a/src/pages/order1.astro
+++ b/src/pages/order1.astro
@@ -1,11 +1,11 @@
 ---
-import Layout from '../layouts/Pattern2.astro';
+import Layout from '../layouts/Pattern1order.astro';
 import { ViewTransitions } from 'astro:transitions';
 
 ---
 <ViewTransitions />
 
-<Layout title="パターンオーダー ミニマムウォレット">
+<Layout title="キーケース オーダー">
   <main>
 
   </main>
