--- a/src/layouts/Pattern2order.astro
+++ b/src/layouts/Pattern2order.astro
@@ -9,7 +9,7 @@ const { title,description,image } = Astro.props;
 
 import Header from "../components/Header.astro";
 
-import Pa2 from "../components/Pa2.astro";
+import Pa2order from "../components/Pa2order.astro";
 
 import Back from "../components/Back.astro";
 import Footer from "../components/Footer.astro";
@@ -31,8 +31,8 @@ import '@fontsource/shippori-mincho';
 		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		
-		<title>パターンオーダー ミニマムウォレット</title>
-		<meta name="description" content="パターンオーダー ミニマムウォレット" />
+		<title>オーダー ミニマムウォレット</title>
+		<meta name="description" content="オーダー ミニマムウォレット" />
 		<meta name="format-detection" content="telephone=no" />
         <meta name="googlebot" content="noindex">
         <meta name="robots" content="noindex,nofollow" />
@@ -48,7 +48,7 @@ import '@fontsource/shippori-mincho';
 
         <Header />
 
-        <Pa2 />		
+        <Pa2order />		
 
 		<Back />
 		<Footer />
