--- a/src/pages/patternoder-kh.astro
+++ b/src/pages/patternoder-kh.astro
@@ -5,7 +5,7 @@ import { ViewTransitions } from 'astro:transitions';
 ---
 <ViewTransitions />
 
-<Layout title="パターンオーダー キーケース（ フックタイプ ）について">
+<Layout title="パターンオーダー キーケース（ フックタイプ ）">
   <main>
 
   </main>
