--- a/src/components/Pa2.astro
+++ b/src/components/Pa2.astro
@@ -226,9 +226,10 @@
                 
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="name">イニシャル刻印</label>
-                <input class="Home_Contact_InputText__vKPd7" id="name"  placeholder="12文字までをご記入ください、配置:ポケット1または2">
-           
+                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印</label>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください、配置:ポケット1または2"></textarea>
+
+
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
         </div>
