--- a/src/components/Pa1.astro
+++ b/src/components/Pa1.astro
@@ -204,9 +204,9 @@
                 
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="name">イニシャル刻印 (&thinsp;希望の方 配置:右ポケット&thinsp;)</label>
-                <input class="Home_Contact_InputText__vKPd7" id="name"  placeholder="12文字までをご記入ください">
-           
+                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印 (&thinsp;希望の方 配置:右ポケット&thinsp;)</label>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください"></textarea>
+
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
             <br>
