--- a/src/components/Pa1order.astro
+++ b/src/components/Pa1order.astro
@@ -18,10 +18,24 @@
                     <img loading="lazy" src="/fasner-min.webp" class="slide__img" alt="ファスナー色">
 
                 </div>
-                <div id="slides__5" class="slide">
-                    <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt="ファスナー色">
 
-                 
+                <div id="slides__6" class="slide">
+                    <img loading="lazy" src="/thred.webp" class="slide__img" alt="糸">
+
+                </div>
+
+                <div id="slides__7" class="slide">
+                    <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印">
+
+                </div>
+
+                <div id="slides__8" class="slide">
+                    <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印">
+
+                </div>
+
+                <div id="slides__9" class="slide">
+                    <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt="ファスナー色">                 
                 </div>
 
             </div>
@@ -102,14 +116,14 @@
                 <label class="Home_Contact_Label__hwNpu" for="ito">*糸</label>
                 <select name="ito" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
-                    <option value="アイボリー">アイボリー</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ベージュ">ベージュ</option>
-                    <option value="レンガ">レンガ</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="No.1アイボリー">No.1&thinsp;アイボリー</option>
+                    <option value="No.2ブラウン">No.2&thinsp;ブラウン</option>
+                    <option value="No.3ブラック">No.3&thinsp;ブラック</option>
+                    <option value="No.4ダークブラウン">No.4&thinsp;ダークブラウン</option>
+                    <option value="No.5グリーン">No.5&thinsp;グリーン</option>
+                    <option value="No.6ベージュ">No.6&thinsp;ベージュ</option>
+                    <option value="No.7レンガ">No.7&thinsp;レンガ</option>
+                    <option value="No.8ターコイズ">No.8&thinsp;ターコイズ</option>
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu" for="kanagu_hook">*金具（&thinsp;キーフック&thinsp;）</label>
@@ -129,7 +143,7 @@
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印 (&thinsp;希望の方 配置:右ポケット&thinsp;)</label>
-                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください"></textarea>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください.大小文字含むA~Z、数字2桁まで(０〜９、同数字不可:例22)、 記号【.＆】のみ"></textarea>
 
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
@@ -426,7 +440,6 @@
                 .slider__nav {
                     box-sizing: border-box;
                     position: absolute;
-                    bottom: 5%;
                     left: 50%;
                     width: 200px;
                     margin-left: -100px;
