--- a/src/components/Pa3.astro
+++ b/src/components/Pa3.astro
@@ -9,19 +9,27 @@
                 
                 <div id="slides__1" class="slide">
                     
-                    <img loading="lazy" src="/keycasrre.webp" class="slide__img" alt="パターン">
-            
+                    <img loading="lazy" src="/keypattern.webp" class="slide__img" alt="パターン">
                 </div>
                 <div id="slides__2" class="slide">
-                    <img loading="lazy" src="/color1.webp" class="slide__img" alt="皮サンプル">
+                    <img loading="lazy" src="/keycasrre.webp" class="slide__img" alt="皮サンプル">
                  
                 </div>
                 <div id="slides__3" class="slide">
-                    <img loading="lazy" src="/color2.webp" class="slide__img" alt=皮サンプル２"">
+                    <img loading="lazy" src="/color1.webp" class="slide__img" alt=皮サンプル２"">
                   
                 </div>
                 <div id="slides__4" class="slide">
                     <img loading="lazy" src="/color2.webp" class="slide__img" alt=皮サンプル２"">
+
+                </div>
+                <div id="slides__5" class="slide">
+                    <img loading="lazy" src="/fasner-min.webp" class="slide__img" alt=皮サンプル２"">
+
+                </div>
+
+                <div id="slides__6" class="slide">
+                    <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt=皮サンプル２"">
 
                 </div>
             </div>
@@ -37,9 +45,9 @@
       
 
         <p class="bun">
-            革・糸の色・金具のひとつひとつなど、細部にまでこだわれるのが、セミオーダーの醍醐味です。お客様の好みにあった組み合わせをぜひ見つけてください。<br class="pc">
+            革・糸の色・金具のひとつひとつなど、細部にまでこだわれるのが、セミオーダーの醍醐味です。<br class="sp"><br class="sp">お客様の好みにあった組み合わせをぜひ見つけてください。<a href="https://pircamabui.com/patternorder/" class="animate-link" >詳細はこちらから<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a><br class="pc">
             <br class="sp"><br class="sp"><br class="pc">お引き渡しについて、ご配達・仕入れにかかる日数を加え、発送まで３、４週間程度お時間を頂いております。
-            <a href="/leagal" class="animate-link" >詳細はこちらから</a>
+            <a href="/leagal" class="animate-link" >詳細はこちらから<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a>
           
         </p>
     </div>
@@ -70,8 +78,8 @@
                     <option value="ピンク">ピンク</option>
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="exteriorwhite">外装 ホワイトワックス(希望の方のみ)</label>
-                <select name="exteriorwhite" class="form-control" >
+                <label class="Home_Contact_Label__hwNpu" for="exterior_white">外装 ホワイトワックス(希望の方のみ)</label>
+                <select name="exterior_white" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
@@ -131,18 +139,32 @@
                     <option value="シルバー">シルバー</option>
                 </select>
 
+                <label class="Home_Contact_Label__hwNpu" for="hatome">*ハトメ</label>
+                <select name="hatome" class="form-control" required="required">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="ゴールド">ゴールド</option>
+                    <option value="シルバー">シルバー</option>
+                </select>
+
+                <label class="Home_Contact_Label__hwNpu" for="ring">*リング</label>
+                <select name="ring" class="form-control" required="required">
+                    <option value="" disabled selected>選択してください</option>
+                    <option value="ゴールド">ゴールド</option>
+                    <option value="シルバー">シルバー</option>
+                </select>
+
 
                 <label class="Home_Contact_Label__hwNpu" for="ito">*糸</label>
                 <select name="ito" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
+                    <option value="アイボリー">アイボリー</option>
+                    <option value="ブラック">ブラック</option>
                     <option value="ブラウン">ブラウン</option>
                     <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="グレー">グレー</option>
-                    <option value="オレンジ">オレンジ</option>
+                    <option value="ベージュ">ベージュ</option>
+                    <option value="レンガ">レンガ</option>
                     <option value="グリーン">グリーン</option>
                     <option value="ターコイズ">ターコイズ</option>
-                    <option value="ピンク">ピンク</option>
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様</label>
@@ -155,9 +177,9 @@
                 
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu" for="name">イニシャル刻印</label>
-                <input class="Home_Contact_InputText__vKPd7" id="name"  placeholder="12文字までをご記入ください、配置は中央ポケット">
-           
+                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印</label>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください、配置:中央ポケット"></textarea>
+
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
         </div>
@@ -215,11 +237,23 @@
       </script>
       
 
+  
       <style>
 
-
-
-
+        .recaptcha_policy {
+            padding: 0;
+            margin: 0;
+            padding-top: 10px;
+            text-align: center;
+            font-size: 11px !important;
+            color: #444 !important;
+        }
+        
+        .grecaptcha-badge { visibility: hidden; }
+        
+            
+        
+        
         a.slide__next,
         .slider::after {
             transform: rotate(-45deg);
@@ -305,7 +339,6 @@
                     line-height: 2;
                     font-size: 0.9575rem;
                     font-family: "Shippori Mincho", sans-serif;
-                    margin: 80px auto 0;
                 
                 }
                 
@@ -352,6 +385,7 @@
                 body {
                     margin: 0;
                     padding: 0;
+                    
                     box-sizing: border-box;
                     font-family: 'Shippori Mincho', sans-serif;
                 
@@ -363,13 +397,13 @@
                     width: 80%;
                     max-width: 1200px;
                     margin: 40px auto;
-                    margin-top: 100px;
+                    margin-top: 120px;
                 }
         
         
                 @media print, screen and (max-width: 767px) {
                     .container {
-                        width: 100%;
+                        width: 80%;
         
                     }
         
@@ -439,7 +473,6 @@
                 .slider__nav {
                     box-sizing: border-box;
                     position: absolute;
-                    bottom: 5%;
                     left: 50%;
                     width: 200px;
                     margin-left: -100px;
@@ -515,7 +548,13 @@
                     padding: 0;
                     margin: 0;
                 }
-                
+        
+        
+        *,:before,:after {
+            box-sizing: border-box;
+            border-style: solid;
+            border-width: 0
+        }
                 
                 
                 .Home_Contact__nbvJ6 {
