--- a/src/components/Pa2.astro
+++ b/src/components/Pa2.astro
@@ -20,14 +20,37 @@
                   
                 </div>
                 <div id="slides__4" class="slide">
-                    <img loading="lazy" src="/fasner-min.webp" class="slide__img" alt=皮サンプル２"">
+                    <img loading="lazy" src="/patternwhite.webp" class="slide__img" alt="ホワイトワックス">
 
                 </div>
 
                 <div id="slides__5" class="slide">
-                    <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt=皮サンプル２"">
+                    <img loading="lazy" src="/fasner-min.webp" class="slide__img" alt="ファスナー色">
 
                 </div>
+
+                <div id="slides__6" class="slide">
+                    <img loading="lazy" src="/thred.webp" class="slide__img" alt="糸">
+
+                </div>
+                <div id="slides__7" class="slide">
+                    <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印参考">
+
+                 
+                </div>
+
+                <div id="slides__8" class="slide">
+                    <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印例">
+
+                 
+                </div>
+
+                <div id="slides__9" class="slide">
+                    <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt="金具色">
+
+                 
+                </div>
+
             </div>
             <div class="slider__nav">
                 <a class="slider__navlink" href="#slides__1"></a>
@@ -39,7 +62,6 @@
     </div>
     <div class="description-container">
       
-
         <p class="bun">
             革・糸の色・金具のひとつひとつなど、細部にまでこだわれるのが、セミオーダーの醍醐味です。<br class="sp"><br class="sp">お客様の好みにあった組み合わせをぜひ見つけてください。<a href="https://pircamabui.com/patternorder/" class="animate-link" >詳細はこちらから<svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" fill="#003EA2" viewBox="0 0 256 256"><path d="M132,136v64a12,12,0,0,1-24,0V165L48.49,224.49a12,12,0,0,1-17-17L91,148H56a12,12,0,0,1,0-24h64A12,12,0,0,1,132,136ZM208,28H80A20,20,0,0,0,60,48V92a12,12,0,0,0,24,0V52H204V172H164a12,12,0,0,0,0,24h44a20,20,0,0,0,20-20V48A20,20,0,0,0,208,28Z"></path></svg></a><br class="pc">
             <br class="sp"><br class="sp"><br class="pc">お引き渡しについて、ご配達・仕入れにかかる日数を加え、発送まで３、４週間程度お時間を頂いております。
@@ -73,18 +95,16 @@
                     <option value="ターコイズ">ターコイズ</option>
                     <option value="ピンク">ピンク</option>
                 </select>
-
-                <label class="Home_Contact_Label__hwNpu" for="exteriorwhite">外装 ホワイトワックス(希望の方のみ)</label>
-                <select name="exteriorwhite" class="form-control" >
+                <label class="Home_Contact_Label__hwNpu" for="exterior_white">外装 ホワイトワックス (&thinsp;希望の方のみ+3,000円&thinsp;、参考画像上からの順番)</label>
+                <select name="exterior_white" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
                     <option value="ブラック">ブラック</option>
                     <option value="グレー">グレー</option>
-                    <option value="オレンジ">オレンジ</option>
-                    <option value="グリーン">グリーン</option>
                     <option value="ターコイズ">ターコイズ</option>
+                    <option value="グリーン">グリーン</option>
                     <option value="ピンク">ピンク</option>
+                    <option value="ダークブラウン">ダークブラウン</option>
+                    <option value="ブラウン">ブラウン</option>
                 </select>
              
                 <label class="Home_Contact_Label__hwNpu" for="interior">*内装</label>
@@ -100,7 +120,7 @@
                     <option value="ピンク">ピンク</option>
                 </select>
             
-                <label class="Home_Contact_Label__hwNpu" for="left_pocket1">*ポケット1</label>
+                <label class="Home_Contact_Label__hwNpu" for="left_pocket1">*ポケット1 右側</label>
                 <select name="left_pocket1" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
@@ -113,7 +133,7 @@
                     <option value="ピンク">ピンク</option>
                 </select>
              
-                <label class="Home_Contact_Label__hwNpu" for="right_pocket2">*ポケット2</label>
+                <label class="Home_Contact_Label__hwNpu" for="right_pocket2">*ポケット2 左側</label>
                 <select name="ight_pocket2" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
                     <option value="ブラウン">ブラウン</option>
@@ -207,27 +227,27 @@
                 <label class="Home_Contact_Label__hwNpu" for="ito">*糸</label>
                 <select name="ito" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
-                    <option value="アイボリー">アイボリー</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ベージュ">ベージュ</option>
-                    <option value="レンガ">レンガ</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="No.1アイボリー">No.1&thinsp;アイボリー</option>
+                    <option value="No.2ブラウン">No.2&thinsp;ブラウン</option>
+                    <option value="No.3ブラック">No.3&thinsp;ブラック</option>
+                    <option value="No.4ダークブラウン">No.4&thinsp;ダークブラウン</option>
+                    <option value="No.5グリーン">No.5&thinsp;グリーン</option>
+                    <option value="No.6ベージュ">No.6&thinsp;ベージュ</option>
+                    <option value="No.7レンガ">No.7&thinsp;レンガ</option>
+                    <option value="No.8ターコイズ">No.8&thinsp;ターコイズ</option>
                 </select>
 
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様</label>
                 <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り（配置ポケット1）</option>
-                    <option value="有り">有り（配置ポケット2）</option>
+                    <option value="有り">有り（配置ポケット1 右側）</option>
+                    <option value="有り">有り（配置ポケット2 左側）</option>
                     <option value="無し">無し</option>
                 
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印</label>
-                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください、配置:ポケット1または2"></textarea>
+                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:ポケット1 右側&thinsp;)</label>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください.大小文字含むA~Z、数字2桁まで(０〜９、同数字不可:例22)、 記号【.＆】のみ"></textarea>
 
 
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
@@ -288,6 +308,7 @@
       
 
 
+  
       <style>
 
         .recaptcha_policy {
@@ -523,7 +544,6 @@
                 .slider__nav {
                     box-sizing: border-box;
                     position: absolute;
-                    bottom: 5%;
                     left: 50%;
                     width: 200px;
                     margin-left: -100px;
