--- a/src/components/Pa2order.astro
+++ b/src/components/Pa2order.astro
@@ -20,13 +20,27 @@
                   
                 </div>
                 <div id="slides__4" class="slide">
-                    <img loading="lazy" src="/fasner-min.webp" class="slide__img" alt=皮サンプル２"">
+                    <img loading="lazy" src="/fasner-min.webp" class="slide__img" alt=ファスナーサンプル"">
 
                 </div>
 
                 <div id="slides__5" class="slide">
-                    <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt=皮サンプル２"">
+                    <img loading="lazy" src="/thred.webp" class="slide__img" alt="糸">
 
+                </div>
+
+                <div id="slides__6" class="slide">
+                    <img loading="lazy" src="/kokuinn.webp" class="slide__img" alt="刻印">
+
+                </div>
+
+                <div id="slides__7" class="slide">
+                    <img loading="lazy" src="/stamp.webp" class="slide__img" alt="刻印">
+
+                </div>
+
+                <div id="slides__8" class="slide">
+                    <img loading="lazy" src="/fasnerre.webp" class="slide__img" alt="ファスナー色">                 
                 </div>
             </div>
             <div class="slider__nav">
@@ -104,28 +118,28 @@
                 <label class="Home_Contact_Label__hwNpu" for="ito">*糸</label>
                 <select name="ito" class="form-control" required="required">
                     <option value="" disabled selected>選択してください</option>
-                    <option value="アイボリー">アイボリー</option>
-                    <option value="ブラック">ブラック</option>
-                    <option value="ブラウン">ブラウン</option>
-                    <option value="ダークブラウン">ダークブラウン</option>
-                    <option value="ベージュ">ベージュ</option>
-                    <option value="レンガ">レンガ</option>
-                    <option value="グリーン">グリーン</option>
-                    <option value="ターコイズ">ターコイズ</option>
+                    <option value="No.1アイボリー">No.1&thinsp;アイボリー</option>
+                    <option value="No.2ブラウン">No.2&thinsp;ブラウン</option>
+                    <option value="No.3ブラック">No.3&thinsp;ブラック</option>
+                    <option value="No.4ダークブラウン">No.4&thinsp;ダークブラウン</option>
+                    <option value="No.5グリーン">No.5&thinsp;グリーン</option>
+                    <option value="No.6ベージュ">No.6&thinsp;ベージュ</option>
+                    <option value="No.7レンガ">No.7&thinsp;レンガ</option>
+                    <option value="No.8ターコイズ">No.8&thinsp;ターコイズ</option>
                 </select>
 
 
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">*刻印模様</label>
                 <select name="kokuin" class="form-control" required="required" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り（配置ポケット1）</option>
-                    <option value="有り">有り（配置ポケット2）</option>
+                    <option value="有り">有り（配置ポケット1 右側）</option>
+                    <option value="有り">有り（配置ポケット2 左側）</option>
                     <option value="無し">無し</option>
                 
                 </select>
 
-                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印</label>
-                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください、配置:ポケット1または2"></textarea>
+                <label class="Home_Contact_Label__hwNpu"  for="message">イニシャル刻印(&thinsp;希望の方 配置:ポケット1 右側&thinsp;)</label>
+                <textarea class="Home_Contact_Textarea__iUa5y" id="message" name="message" rows="5"  placeholder="12文字までをご記入ください.大小文字含むA~Z、数字2桁まで(０〜９、同数字不可:例22)、 記号【.＆】のみ"></textarea>
 
                 <button type="submit" class="Home_Contact_Button__sfQX_">送信する</button>
             </form>
@@ -184,7 +198,7 @@
       </script>
       
 
-
+ 
       <style>
 
         .recaptcha_policy {
@@ -420,7 +434,6 @@
                 .slider__nav {
                     box-sizing: border-box;
                     position: absolute;
-                    bottom: 5%;
                     left: 50%;
                     width: 200px;
                     margin-left: -100px;
@@ -647,4 +660,4 @@
                 }
                 
                 </style>
-                
+            
