--- a/src/components/Walletfas.astro
+++ b/src/components/Walletfas.astro
@@ -37,9 +37,11 @@
                 <p><img loading="lazy" src="/pink44.webp" alt="" width="720" height="480" class="alignnone size-full wp-image-20004"></p>
                 <p>背面は、ガバっと開く設計にしているため、ストレスなくお札の出し入れができます。<br class="pc"><br class="pc"><br class="sp"><br class="sp">両端のカードポケットには、普段あまり使わないカード類を4、5枚ほど束にして収納がすることができます。<br class="sp"><br class="sp">こだわりを詰め込んだ設計にしたことで、コンパクトな大きさと使いやすさを両立させました。</p>
                 <br class="sp"><br class="sp"><br class="pc">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>                  &ensp;<a href="https://pircamabui.stores.jp/items/665030fae02e4301bb83ad8e" class="animate-link">(準備中)ご注文はこちらから</a>・・・22,000円（税込)</a><br class="sp"><br class="pc">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>                 
+                 &ensp;<a href="https://pircamabui.stores.jp/items/665030fae02e4301bb83ad8e" class="animate-link">(準備中)ご注文はこちらから</a>・・・25,000円（税込)</a><br class="sp"><br class="pc">
                   <br>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>                  &ensp;<a href="/" class="animate-link" >(準備中)セミオーダーご希望の方はこちらから</a>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0f0f0f" viewBox="0 0 256 256"><path d="M239.89,198.12l-14.26-120a16,16,0,0,0-16-14.12H176a48,48,0,0,0-96,0H46.33a16,16,0,0,0-16,14.12l-14.26,120A16,16,0,0,0,20,210.6a16.13,16.13,0,0,0,12,5.4H223.92A16.13,16.13,0,0,0,236,210.6,16,16,0,0,0,239.89,198.12ZM128,32a32,32,0,0,1,32,32H96A32,32,0,0,1,128,32ZM32,200,46.33,80H80v24a8,8,0,0,0,16,0V80h64v24a8,8,0,0,0,16,0V80h33.75l14.17,120Z"></path></svg>               
+                     &ensp;<a href="/" class="animate-link" >(準備中)セミオーダーご希望の方はこちらから</a>
                 
              
                 </p>
@@ -50,10 +52,10 @@
               </div>
   
               <div class="c-singlePager">
-                <a href="/threewallet" class="c-singlePager_arrow-prev">
+                <a href="/foldwallet" class="c-singlePager_arrow-prev">
                 <span>Back</span>
               </a>
-                  <a href="/smallwallet" class="c-singlePager_arrow-next">
+                  <a href="/" class="c-singlePager_arrow-next">
                 <span>Next</span>
               </a>
             </div>
