--- a/src/components/Productlist.astro
+++ b/src/components/Productlist.astro
@@ -152,7 +152,7 @@
 
 
 <li class="newsList_node c-newsList_node">
-  <a href="/">
+  <a href="/foldwallet">
     <div class="c-newsList_columnLeft">
       <div class="newsList_info c-newsList_info">
         <div class="newsList_category c-newsList_category">
