--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -71,7 +71,7 @@
   <li class="c-bannerList_node">
     <a href="/kodawari">
       <div class="c-bannerList_img">
-        <img src="/leatherhosii-min.webp" alt="当店の画像について" >
+        <img src="/door.webp" alt="当店の画像について" >
       </div>
       <h3 class="c-bannerList_title">ABOUT SHOP</h3>
       <p class="c-bannerList_text">当店の厳選した上質な素材、こだわりについて紹介しています。<br><center><span class="in" style="color: #999999;">引用:https://virgilioconceriaartigiana.it</span> </center></p>
