--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -74,7 +74,7 @@
         <img src="/door.webp" alt="当店の画像について" >
       </div>
       <h3 class="c-bannerList_title">ABOUT SHOP</h3>
-      <p class="c-bannerList_text">当店の厳選した上質な素材、こだわりについて紹介しています。<br><center><span class="in" style="color: #999999;">引用:https://virgilioconceriaartigiana.it</span> </center></p>
+      <p class="c-bannerList_text">当店の厳選した上質な素材、こだわりについて紹介しています。</p>
     </a>
   </li>
 </ul>
