--- a/src/components/Pa2.astro
+++ b/src/components/Pa2.astro
@@ -240,8 +240,8 @@
                 <label class="Home_Contact_Label__hwNpu" for="kokuin">刻印模様</label>
                 <select name="kokuin" class="form-control" >
                     <option value="" disabled selected>選択してください</option>
-                    <option value="有り">有り（配置ポケット1 右側）</option>
-                    <option value="有り">有り（配置ポケット2 左側）</option>
+                    <option value="有り（配置ポケット1 右側）">有り（配置ポケット1 右側）</option>
+                    <option value="有り（配置ポケット2 左側）">有り（配置ポケット2 左側）</option>
                     <option value="無し">無し</option>
                 
                 </select>
