--- a/src/components/HomeEn.astro
+++ b/src/components/HomeEn.astro
@@ -70,10 +70,10 @@
   <li class="c-bannerList_node">
     <a href="/aboutEn">
       <div class="c-bannerList_img">
-        <img src="/leatherhosii-min.webp" alt="当店の画像について" >
+        <img src="/door.webp" alt="当店の画像について" >
       </div>
       <h3 class="c-bannerList_title">ABOUT THE SHOP</h3>
-      <p class="c-bannerList_text">We're introducing our commitment to quality and attention to detail.<br><br><center><span style="color: #999999;">References:https://virgilioconceriaartigiana.it</span> </center></p>
+      <p class="c-bannerList_text">We're introducing our commitment to quality and attention to detail.</p>
     </a>
   </li>
 </ul>
